--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=${secrets.SPRING_DATASOURCE_URL}
-spring.datasource.username=${secrets.SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${secrets.SPRING_DATASOURCE_PASSWORD}
+# spring.datasource.url=${secrets.SPRING_DATASOURCE_URL}
+# spring.datasource.username=${secrets.SPRING_DATASOURCE_USERNAME}
+# spring.datasource.password=${secrets.SPRING_DATASOURCE_PASSWORD}
+
+
 
